--- a/app/src/main/res/values/mystyle.xml
+++ b/app/src/main/res/values/mystyle.xml
@@ -16,11 +16,17 @@
     </style>
 
 
-    <style name="row_style" parent="Theme.AppCompat.Light" >
-        <item name="android:textSize">30dp</item>
+    <style name="text_style1" parent="Theme.AppCompat.Light" >
+        <item name="android:textSize">32dp</item>
         <item name="android:textStyle">bold</item>
         <item name="android:textColor">#1A1A1B</item>
-        <item name="android:backgroundTint">#05595B</item>
+        <item name="android:gravity">center</item>
+        <item name="android:padding">20dp</item>
+    </style>
+    <style name="text_style2" parent="Theme.AppCompat.Light" >
+        <item name="android:textSize">28dp</item>
+        <item name="android:textStyle"></item>
+        <item name="android:textColor">#1A1A1B</item>
         <item name="android:gravity">center</item>
         <item name="android:padding">20dp</item>
     </style>
